# roon-knob

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.beads/: config.yaml
.github/: release-drafter.yml
.github/workflows/: ci.yml  docker.yml  release.yml
common/: app.h  app_main.c  controller_mode.c  rk_cfg.h  roon_client.c  roon_client.h  ui.c  ui.h
common/platform/: platform.h  platform_http.h  platform_input.h  platform_log.c  platform_log.h  platform_mdns.h  platform_storage.h  platform_task.c  platform_task.h  platform_time.c  platform_time.h
docs/: DEVELOPMENT.md  DISPLAY.md  IMPLEMENTATION_NOTES.md  PROJECT_AIMS.md  SWIPE_GESTURES.md  TOUCH_INPUT.md
docs/references/: GPIO_BUTTONS.md  HARDWARE_PINS.md  README.md  ROTARY_ENCODER_PCNT.md
history/: issues.jsonl
idf_app/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
idf_app/components/ble_hid/: CMakeLists.txt  README.md
idf_app/main/: CMakeLists.txt  ble_hid_client.c  ble_hid_client.h  captive_portal.c  config_server.c  cst816.c  (+25 more)
include/: os_mutex.h  os_thread.h  os_time.h  storage.h
pc_sim/: CMakeLists.txt  lv_conf.h  main.c  main_pc.c  platform_http_pc.c  platform_input_pc.c  platform_mdns_pc.c  platform_storage_pc.c  storage_file.c  ui.c  ui.h
pc_sim/components/net_client/: curl_client.c
roon-extension/: README.md  app.js  bridge.js  docker-compose.yml  hqplayer_profile_switcher.js  logger.js  mdns.js  package-lock.json  package.json  routes.js  server.js
scripts/: build_flash_idf.sh  ci_sanity.sh  install.sh  release_firmware.sh  run_pc.sh  setup_mac.sh
tests/: test_json_parse.py
(+5 files in other folders)
